# open-conv

./: .gitignore  PATHS-NOT-TAKEN.md  README.md  TODO.md  flake.nix
docs/: DSP.md  PARAMS.md
docs/design/: 01-architecture.md
docs/research/: 01-prior-art.md
docs/research/raw/: angles.md  sources.md  verdicts.md
lab/: README.md  convlab.py  exp01_factorization.py  exp02_stepwise.py  exp03_size_stream.py  exp04_tail_fit.py
rt/: Cargo.toml
rt/cli/: Cargo.toml
rt/cli/src/: main.rs
rt/engine/: Cargo.toml
rt/engine/src/: banks.rs  lib.rs
rt/engine/tests/: damp_service.rs
testdata/probes/: README.md
tools/: make_probes.py  render_batch.py
wrac/: Cargo.toml
wrac/plugins/open-conv/src-plugin/: Cargo.toml
wrac/plugins/open-conv/src-plugin/src/: audio.rs  lib.rs  plugin.rs  state.rs
wrac/plugins/open-conv/src-plugin/src/plugin/: audio_ports.rs  params.rs  state.rs
